Fix Caret Color Bug Caret for drop-up on .btn-large (only) was stuck on black Now it'll use the appropriate color.
Before: <http://i.imgur.com/LECYV.png>
After: <http://i.imgur.com/EjsRb.png>

--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -189,11 +189,6 @@
   border-right-width: 5px;
   border-top-width:   5px;
 }
-// Upside down carets for .dropup
-.dropup .btn-large .caret {
-  border-bottom: 5px solid @black;
-  border-top: 0;
-}
 
 
 
